# romset-desktop

./: CMakeLists.txt  README.md  hello-world-gtk
doc/: classes.md
include/: Catalogue.hpp  Requests.hpp  RomFile.hpp  Romset.hpp  XML.hpp
src/: CMakeLists.txt  Romset.cpp  Romset.hpp  helloworld.hpp  main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/desktop/: CMakeLists.txt  Headerbar.cpp  Headerbar.hpp  MainWindow.cpp  MainWindow.hpp  Sidebar.cpp  Sidebar.hpp  catalogue.cpp  helloworld.cpp  helloworld.hpp  main.cpp
src/lib/: CMakeLists.txt  Catalogue.cpp  Requests.cpp  RomFile.cpp  Romset.cpp  XML.cpp
